--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "python.linting.flake8Args": [
         "--max-line-length=120",
         "--ignore=E402,F841,F401,E302,E305,D100,D101,D107,D105,Q000,D103,D102,E800",
     ],
+    "python.formatting.provider": "autopep8",
 }
