sliding_window_template.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,7 @@
         "--ignore=E402,F841,F401,E302,E305,D100,D101,D107,D105,Q000,D103,D102,E800",
     ],
     "python.formatting.provider": "autopep8",
+    "cSpell.words": [
+        "tempc"
+    ],
 }
